Openapi doc, response model, deserializing, merge model, namings, functional merge entities -fixed some api doc for doublet results -made doublets response model a bit easier and updated api doc for the change -deserializing now actually works for post merge request (nested as well) -merge model extended. this should be redone some time better though -some easier namings -merging entities that are recognized as doublets by indicies works now. persistent merging still TODO
